--- a/config.json
+++ b/config.json
@@ -1,7 +1,6 @@
 {
     "title":"543x.com",
-    "subTitle":"543x.com-THE MONETARY FUTURE:AT THE INTERSECTION OF FREE BANKING, CRYPTOGRAPHY, AND DIGITAL CURRENCY
-",
+    "subTitle":"543x.com-THE MONETARY FUTURE:AT THE INTERSECTION OF FREE BANKING, CRYPTOGRAPHY, AND DIGITAL CURRENCY",
     "avatarUrl":"https://avatars.githubusercontent.com/u/168828774?v=4",
     "GMEEK_VERSION":"last"
 }
